tests/error/type_errors/return_mismatch.py
from tests.util import compile_guppy


@compile_guppy
def foo() -> bool:
    return 42
