tests/error/type_errors/return_mismatch.err
Error: Type mismatch (at $FILE:6:11)
  | 
4 | @compile_guppy
5 | def foo() -> bool:
6 |     return 42
  |            ^^ Expected return value of type `bool`, got `int`

Guppy compilation failed due to 1 previous error
